Actualización del index

--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
 	<title>Prueba</title>
 </head>
 <body>
-	Esta es una prueba 2
-	Otra linea
+	Aquí va un texto
 	Server
 	<br>
 	<ul>
@@ -13,5 +12,8 @@
 	
 	<p>Otra cosa</p>
 	<a>link</a>
+
+	<p>Otra cosa</p>
+
 </body>
 </html>
